--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,8 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-systemProp.http.proxyHost=proxy.sgp.hp.com
-systemProp.http.proxyPort=8080
+#systemProp.http.proxyHost=proxy.sgp.hp.com
+#systemProp.http.proxyPort=8080
 
-systemProp.https.proxyHost=proxy.sgp.hp.com
-systemProp.https.proxyPort=8080
+#systemProp.https.proxyHost=proxy.sgp.hp.com
+#systemProp.https.proxyPort=8080
